fixed some z-index issues with lightbox and typing new notes + videobox zooming zindex

--- a/src/client/views/LightboxView.scss
+++ b/src/client/views/LightboxView.scss
@@ -4,7 +4,7 @@
     width: 100%;
     height: 100%;
     background: #000000bb;
-    z-index: 10000;
+    z-index: 1000;
     .lightboxView-contents {
         position: absolute;
     }
