--- a/src/client/views/PreviewCursor.scss
+++ b/src/client/views/PreviewCursor.scss
@@ -7,4 +7,5 @@
     left:0;
     pointer-events: none;
     opacity: 1;
+    z-index: 1001;
 }
